# fiware-orion

./: CMakeLists.txt
docker/: Dockerfile
src/app/rapidjsonPoc/: CMakeLists.txt  rapidjson.cpp
src/lib/apiTypesV2/: Entity.cpp
src/lib/common/: globals.cpp
src/lib/jsonParseV2/: parseContextAttribute.cpp
src/lib/logMsg/: logMsg.h
src/lib/mongoBackend/: MongoCommonUpdate.cpp  MongoGlobal.cpp
src/lib/ngsi/: ContextAttribute.cpp  ContextAttribute.h
test/LoadTest/: append_entities_cb.jmx  append_entities_cb_xml.jmx  performanceStack.json  query_entities_cb.jmx  query_entities_cb_xml.jmx
test/functionalTest/cases/0000_ngsi10_update/: empty_attribute_value.test
test/functionalTest/cases/0766_attribute_metadata_update/: attribute_metadata_update.test  update_without_attribute_value_in_v1.test
test/functionalTest/cases/1188_attribute_update_with_empty_string/: attribute_update_with_empty_string.test
test/unittests/mongoBackend/: mongoUpdateContext_test.cpp
